Bug 273946. We actually don't need to correct the y-position of empty blocks; it's already correct for both the collapsing-with-parent and not-collapsing-with-parent cases. Also, clearance on an empty line should force subsequent lines to apply their top margins. Also, clearance on an empty line should *not* prevent its top and bottom margins from collapsing. r+sr=dbaron